<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="Explore" />

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="Map"/>

    <item
        android:id="@+id/nav_fav"
        android:icon="@drawable/ic_baseline_star_border_24"
        android:title="Fav" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="Profile" />
</menu>
