<resources>
    <string name="app_name">EventMe</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_explore">Explore Events</string>
    <string name="title_activity_maps">Event Map</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_search">\uD83D\uDD0D Search for...</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_repassword">Not match with password</string>
    <string name="invalid_nickname">Not a valid nickname</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_detail">"Event Detail"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_content">MainContentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="popular">🔥</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- sort spinner values  -->
    <string-array name="Sorts" >
        <item>Cost</item>
        <item>Distance</item>
        <item>Time</item>
        <item>Alphabetic</item>
        <item>Popularity</item>
    </string-array>

    <!-- type spinner values  -->
    <string-array name="Types" >
        <item>All</item>
        <item>Party</item>
        <item>Concert</item>
        <item>Exhibition</item>
        <item>Sport</item>
        <item>Comedy</item>
    </string-array>



</resources>